added random phrase to layout

--- a/app/views/greek_lemmas/show.html.haml
+++ b/app/views/greek_lemmas/show.html.haml
@@ -2,7 +2,7 @@
   .lemma
     .ddglc-id
       ="(#{@greek_lemma.id})"
-    .label
+    .lemma-label
       %b= @greek_lemma.label
     .meaning
       %i= @greek_lemma.meaning
