--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,10 @@
     .container-fluid#main-container
       .row
         .col-xs-3
-          %h3
-            Word of the day
+          %p
+            Are you interested in
+            = render 'shared/random_phrase'
+            ?
         .col-xs-9
           = yield
 
