--- a/app/views/orthographies/show.html.haml
+++ b/app/views/orthographies/show.html.haml
@@ -1,6 +1,6 @@
 %body
-  .lemma
-    .label
+  .orthography
+    .orthography-label
       %b= @orthography.label
     .reference
       = link_to "Go to Coptic sublemma", coptic_sublemma_path(@orthography.coptic_sublemma_id)
