added sources, attestations, and encoding

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -2,12 +2,15 @@
   = navbar_header brand: 'Loanword Orthographies'
   = navbar_collapse do
     = navbar_group id: 'menu' do
-      = navbar_item "Home", root_path
-      = navbar_dropdown "Data" do
+      = navbar_item 'Home', root_path
+      = navbar_item 'Basic Statistics', basic_statistics_index_path
+      = navbar_dropdown 'Data' do
         = navbar_dropdown_header 'Choose your data'
-        = navbar_item "Greek Lemmas", greek_lemmas_path
-        = navbar_item "Coptic Sublemmas", coptic_sublemmas_path
-        = navbar_item "Orthographies", orthographies_path
+        = navbar_item 'Greek Lemmas', greek_lemmas_path
+        = navbar_item 'Coptic Sublemmas', coptic_sublemmas_path
+        = navbar_item 'Orthographies', orthographies_path
+        = navbar_item 'Attestations', attestations_path
+        = navbar_item 'Sources', sources_path
     = navbar_group align: 'right', id: 'ddglc_reference' do
       = link_to 'http://research.uni-leipzig.de/ddglc/', target: :_blank do
         = image_tag('ddglc_logo.jpg', class: :ddglc_logo, height: '50', alt: 'DDGLC')
