implemented basic statistics, time dependent analysis

--- a/app/views/basic_statistics/index.html.haml
+++ b/app/views/basic_statistics/index.html.haml
@@ -1,4 +1,12 @@
 .section
   %h1
-    A wonderful tree
-  %svg#tree
+    Basic Statistics
+  = high_chart('chart_id', @chart)
+  .btn-group
+    %button{type: 'button', class: 'btn btn-default dropdown-toggle', 'data-toggle': 'dropdown', 'aria-hashpopup': 'true', 'aria-expanded': 'false'}
+      Interval Size
+      %span.caret
+    %ul{class: 'dropdown-menu'}
+      %li= link_to '50', '?interval=50'
+      %li= link_to '100', '?interval=100'
+      %li= link_to '250', '?interval=250'
