--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,4 +1,8 @@
 %section
+  %p
+    Are you interested in
+    = render 'shared/random_phrase'
+    ?
   %ul
     %li= link_to 'Greek lemmas', greek_lemmas_path
     %li= link_to 'Coptic sublemmas', coptic_sublemmas_path
