--- a/app/views/sources/show.html.haml
+++ b/app/views/sources/show.html.haml
@@ -2,7 +2,6 @@
   %ul
     %li= "Manuscript: #{@source.manuscript}"
     %li= "Text: #{@source.text}"
-    %li= "Dating: #{@source.dating_start} to #{@source.dating_end}"
+    %li= "Dating: #{@source.dating_interval.join(' to ')}"
     %li= "Dialect: #{@source.dialect}"
-    %li= "Typology: #{@source.typo_broad}, #{@source.typo_content}, #{@source.typo_form},
-          #{@source.typo_sociohistoric}, #{@source.typo_speccorpus}, #{@source.typo_subjectmatter}"
+    %li= "Typology: #{@source.typologies.join(', ')}"
