--- a/app/assets/stylesheets/tree.css.sass
+++ b/app/assets/stylesheets/tree.css.sass
@@ -4,8 +4,8 @@
   font-style: normal
   src: font-url('Antinoou.ttf') format('truetype')
 
-p
-  font-size: 16px
+.tree-expl
+  font-size: 14px
 
 .noun-color
   color: #cdd422
@@ -50,6 +50,9 @@ p
 
 .leaf-node
   cursor: default
+  fill: #fff
+  stroke: #bccbde
+  stroke-width: 5px
 
 .a-dialect-color
   color: rgb(171, 91, 167)
@@ -106,7 +109,7 @@ circle
   stroke: #bccbde
   stroke-width: 4px
 
-rect
+.internal-node
   cursor: pointer
   fill: #fff
   stroke: #bccbde
