--- a/app/assets/stylesheets/dashboard.css.sass
+++ b/app/assets/stylesheets/dashboard.css.sass
@@ -1,3 +1,14 @@
 // Place all the styles related to the Dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.hexagon
+  fill: white
+  stroke: silver
+  stroke-width: 4
+
+#overview1
+  fill: url(#img1)
+
+.random-phrase
+  fill: #cdd422
