created project description

--- a/app/assets/stylesheets/tree.css.sass
+++ b/app/assets/stylesheets/tree.css.sass
@@ -7,6 +7,18 @@
 .tree-expl
   font-size: 14px
 
+.internal-node
+  cursor: pointer
+  fill: #fff
+  stroke: #bccbde
+  stroke-width: 5px
+
+.leaf-node
+  cursor: default
+  fill: #fff
+  stroke: #bccbde
+  stroke-width: 5px
+
 .noun-color
   color: #cdd422
   font-weight: bold
@@ -21,6 +33,10 @@
 
 .adverb-color
   color: #c7ad88
+  font-weight: bold
+
+.default-color
+  color: #bccbde
   font-weight: bold
 
 .noun-node
@@ -45,13 +61,6 @@
   cursor: pointer
   fill: #fff
   stroke: #c7ad88
-  stroke-width: 5px
-
-
-.leaf-node
-  cursor: default
-  fill: #fff
-  stroke: #bccbde
   stroke-width: 5px
 
 .a-dialect-color
@@ -108,12 +117,6 @@ circle
   fill: #fff
   stroke: #bccbde
   stroke-width: 4px
-
-.internal-node
-  cursor: pointer
-  fill: #fff
-  stroke: #bccbde
-  stroke-width: 5px
 
 g.node a:hover
   text-decoration: none
