--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,9 +1,3 @@
 %section
-  %p
-    Are you interested in
-    = render 'shared/random_phrase'
-    ?
-  %ul
-    %li= link_to 'Greek lemmas', greek_lemmas_path
-    %li= link_to 'Coptic sublemmas', coptic_sublemmas_path
-    %li= link_to 'Orthographies', orthographies_path
+  = render 'shared/hexagons'
+
