--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -15,6 +15,7 @@
         = navbar_item 'Orthographies', orthographies_path
         = navbar_item 'Attestations', attestations_path
         = navbar_item 'Sources', sources_path
+      = navbar_item 'Project Description', description_index_path
     = navbar_group align: 'right', id: 'ddglc_reference' do
       = link_to 'http://research.uni-leipzig.de/ddglc/', target: :_blank do
         = image_tag('ddglc_logo.jpg', class: :ddglc_logo, height: '50', alt: 'DDGLC')
