--- a/app/views/tree/index.html.haml
+++ b/app/views/tree/index.html.haml
@@ -3,13 +3,13 @@
     Orthography Tree
 .row
   .col-xs-2
-    %p
+    %p.tree-expl
       Starting point is a
       %b
         Greek lemma
       in the middle of the first column.
   .col-xs-2
-    %p
+    %p.tree-expl
       In the second column, there are the corresponding
       %b
         coptic sublemmas.
@@ -23,13 +23,13 @@
       = succeed '.' do
         %span.adverb-color adverb
   .col-xs-2
-    %p
+    %p.tree-expl
       The
       %b
         orthographies
       are in the middle. Within each group, the entities are ordered by their dating descending.
   .col-xs-5
-    %p
+    %p.tree-expl
       On the right side, some information to the orthographies are depicted.
       The bars, end points of the links, show the
       %b
