added reference to project description

--- a/app/views/description/index.html.haml
+++ b/app/views/description/index.html.haml
@@ -33,3 +33,11 @@
         .panel-collapse.collapse#collapseFour{:role=>"tabpanel", 'aria-labelledby'=>"algorithms"}
           .panel-body
             = render 'shared/algorithms'
+.row
+  .col-xs-10.col-md-offset-1
+    %p
+      This description follows the model proposed by
+      = link_to 'Munzner (2009), IEEE TVCG, 15(6):921-928', 'http://www.cs.ubc.ca/labs/imager/tr/2009/NestedModel/'
+      and
+      = link_to 'Munzner (2014), CRC Press', 'http://www.cs.ubc.ca/~tmm/vadbook/'
+      among others.
