--- a/app/assets/stylesheets/dashboard.css.sass
+++ b/app/assets/stylesheets/dashboard.css.sass
@@ -8,7 +8,11 @@
   stroke-width: 4
 
 #overview1
-  fill: url(#img1)
+  fill: url(#img_overview1)
+
+#overview2
+  fill: url(#img_overview2)
 
 .random-phrase
-  fill: #cdd422
+  color: rgb(91, 172, 143)
+  font-weight: bold
