installed rails admin

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -15,6 +15,8 @@
         = navbar_item 'Orthographies', orthographies_path
         = navbar_item 'Attestations', attestations_path
         = navbar_item 'Sources', sources_path
+        = navbar_dropdown_divider
+        = navbar_item 'Manage the data', '/admin'
       = navbar_item 'Project Description', description_index_path
     = navbar_group align: 'right', id: 'ddglc_reference' do
       = link_to 'http://research.uni-leipzig.de/ddglc/', target: :_blank do
