--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -18,6 +18,7 @@
         = navbar_dropdown_divider
         = navbar_item 'Manage the data', '/admin'
       = navbar_item 'Project Description', description_index_path
+      = navbar_item 'Crum dictionary', 'http://coptot.manuscriptroom.com/crum-coptic-dictionary', target: '_blank'
     = navbar_group align: 'right', id: 'ddglc_reference' do
       = link_to 'http://research.uni-leipzig.de/ddglc/', target: :_blank do
         = image_tag('ddglc_logo.jpg', class: :ddglc_logo, height: '50', alt: 'DDGLC')
