--- a/app/views/tree/index.html.haml
+++ b/app/views/tree/index.html.haml
@@ -12,7 +12,7 @@
     %p.tree-expl
       In the second column, there are the corresponding
       %b
-        coptic sublemmas.
+        Coptic sublemmas.
       A colored rectangle highlights the part-of-speech:
       = succeed ', ' do
         %span.noun-color noun
