--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -21,5 +21,5 @@
       = navbar_item 'Crum dictionary', 'http://coptot.manuscriptroom.com/crum-coptic-dictionary', target: '_blank'
     = navbar_group align: 'right', id: 'ddglc_reference' do
       = link_to 'http://research.uni-leipzig.de/ddglc/', target: :_blank do
-        = image_tag('ddglc_logo.jpg', class: :ddglc_logo, height: '50', alt: 'DDGLC')
+        = image_tag('ddglc_logo.jpg', class: :ddglc_logo, height: '50', alt: 'DDGLC', id: 'ddglc_logo')
 
