refactored design of description side.

--- a/app/assets/stylesheets/description.css.sass
+++ b/app/assets/stylesheets/description.css.sass
@@ -5,11 +5,17 @@
   color: rgb(211, 70, 32)
   background-color: rgb(251, 203, 158)
 
+.domainColor
+  color: rgb(211, 70, 32)
+
 #abstraction
   color: rgb(172, 123, 29)
   background-color: rgb(239, 229, 168)
 
 #dataAbstraction
+  color: rgb(172, 123, 29)
+
+.abstractionColor
   color: rgb(172, 123, 29)
 
 #taskAbstraction
@@ -28,10 +34,6 @@
 #algorithms
   color: rgb(120, 37, 148)
   background-color: rgb(221, 175, 219)
-
-.list-in-table
-  margin-left: -25px
-  list-style-type: "📌  "
 
 .list-in-table li
   margin-bottom: 15px
