--- a/app/views/shared/_abstraction.html.haml
+++ b/app/views/shared/_abstraction.html.haml
@@ -17,42 +17,52 @@
                     Value
                 %tbody
                   %tr
-                    %td stored dataset type
+                    %td
+                      %i stored dataset type
                     %td relational/ table
                   %tr
-                    %td logical dataset type
+                    %td
+                      %i logical dataset type
                     %td network/ tree
                   %tr
-                    %td dataset availability
+                    %td
+                      %i dataset availability
                     %td static
                   %tr
-                    %td items and attributes
                     %td
-                      %ul.list-in-table
+                      %i items and attributes
+                    %td
+                      %ul.list-in-table.fa-ul
                         %li
-                          Greek lemma:
+                          %i.fa-li.fa.fa-check-square-o
+                          %b Greek lemma:
                           %br
                           label, meaning, part-of-speech
                         %li
-                          Coptic sublemma:
+                          %i.fa-li.fa.fa-check-square-o
+                          %b Coptic sublemma:
                           %br
                           label, part-of-speech
                         %li
-                          Orthography:
+                          %i.fa-li.fa.fa-check-square-o
+                          %b Orthography:
                           %br
                           label
                         %li
-                          Morpho-Syntax:
+                          %i.fa-li.fa.fa-check-square-o
+                          %b Morpho-Syntax:
                           %br
                           label
                         %li
-                          Source:
+                          %i.fa-li.fa.fa-check-square-o
+                          %b Source:
                           %br
                           dating interval, dialect (rough localisation), manuscript, text,
                           %br
                           set of typology categories
                   %tr
-                    %td links and attributes
+                    %td
+                      %i links and attributes
                     %td
                       %table#link-table
                         %tbody
