--- a/app/views/shared/_domain_situation.html.haml
+++ b/app/views/shared/_domain_situation.html.haml
@@ -9,23 +9,32 @@
             Value
         %tbody
           %tr
-            %td domain
+            %td
+              %i domain
             %td Coptology, linguistics
           %tr
-            %td topic
+            %td
+              %i topic
             %td Greek loanwords, particularly their orthographies
           %tr
-            %td source
+            %td
+              %i source
             %td
               = link_to 'DDGLC project', 'http://www.research.uni-leipzig.de/ddglc'
           %tr
-            %td data
+            %td
+              %i data
             %td categorization of orthographies based on the underlying Greek lemma, Coptic sublemma, as well as manuscript and text information
           %tr
-            %td aims
             %td
-              %ul.list-in-table
-                %li gain a clear view of orthographies
-                %li change of orthographies over time
+              %i aims
+            %td
+              %ul.list-in-table.fa-ul
+                %li
+                  %i.fa-li.fa.fa-check-square-o
+                  gain a clear view of orthographies
+                %li
+                  %i.fa-li.fa.fa-check-square-o
+                  change of orthographies over time
   .col-xs-4
-    = link_to image_tag('cut2_coptic_luke.jpg', class: 'img-responsive'), 'https://commons.wikimedia.org/wiki/File:Coptic_luke.jpg', target: '_blank'
+    = link_to image_tag('coptic.jpg', class: 'img-responsive'), 'https://commons.wikimedia.org/wiki/File:Coptic_Manuscript_MET_sf19-196-4a.jpg', target: '_blank'
